# pyncraft

./: .gitignore  LICENSE  pyproject.toml  readme.md  requirements.txt  setup.py
src/core/: __init__.py  entities.py  level.py  logger.py  main.py  pyncraftserver.py
src/core/level/: block.py  enum.py  level.py
src/core/registry/: __init__.py
src/core/registry/data/: blocks.json
src/core/registry/data/core/: cat_variant.json  chat_type.json  chicken_variant.json  cow_variant.json  damage_type.json  dimension_type.json  frog_variant.json  painting_variant.json  pig_variant.json  wolf_sound_variant.json  wolf_variant.json  worldgen.biome.json
src/networking/: __init__.py  connection.py  enum.py  enums.py  mcrypto.py
src/networking/mcpacket/: __init__.py  io.py
src/networking/mcpacket/clientbound/: __init__.py  configuration.py  login.py  play.py  status.py
src/networking/mcpacket/serverbound/: __init__.py  configuration.py  handshake.py  login.py  play.py  status.py
tests/: test_level.py
