[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyncraft_server"
version = "0.0.4"
dependencies = [
    "cryptography==45.0.5",
    "nbtlib==2.0.4",
    "requests==2.32.4",
]

[project.scripts]
pyncraft = "core.main:start_server"

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = {find = {where = ["src"]}}

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "tests",
]